2013-03-13  Kikuchi Koichiro <koichiro@rworks.jp>

	* extensions/update_manager/lib/functions.ajax.php: Added proxy
	 and bsdtar support.

	Merged from: branch_4.0

2013-03-13  Kikuchi Koichiro <koichiro@rworks.jp>

	* extensions/update_manager/lib/xmlrpc/xmlrpc.inc: Keep original
	 connection params when xmlrpc_client->sendPayloadHTTP10() follows
	 30x redirect.

	Merged from: branch_4.0

2013-03-12 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/modules/manage_network_components_form.php,
	godmode/modules/manage_network_templates_form.php: improved the code
	style.
	
	* extensions/update_manager/lib/functions.ajax.php,
	include/graphs/functions_flot.php: fixed the warnings PHP messages.
	
	Fixes: #3607177

2013-03-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/update_manager/lib/functions.ajax.php: disabled the
	trace.
	
	* operation/agentes/ver_agente.php: fixed the output of modules
	when the names is very large.
	
	Fixes: #3607080
	
	* godmode/agentes/module_manager.php: cleaned source code style.

2013-03-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_config.php: fixed PHP notices when the "homeurl"
	is empty in some installations.

2013-03-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_graph.php: change the text of legends of "Data"
	for "Avg".
	
	Fixes: #3607218

2013-03-11  Sergio Martin <sergio.martin@artica.es>

	* include/functions_groups.php
	include/functions_graph.php: Added extral controls in status
	count retrieving functions to avoid negative numbers for
	bug 3607315

	* extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql: Updated
	the data of unknown modules to new fields in migration

2013-03-11 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/planned_downtime.list.php: fixed the lost data
	from planned downtime, show in the table of audits.
	
	Fixes: #3607608
