@@ -91,14 +91,14 @@ function modules_copy_agent_module_to_agent ($id_agent_module, $id_destiny_agent
 	}
 	
 	// If the module is synthetic we duplicate the operations too
-	if($module['id_modulo'] == 5) {
+	if ($module['id_modulo'] == 5) {
 		$synth_ops = db_get_all_rows_field_filter('tmodule_synth','id_agent_module_target',$module['id_agente_modulo']);
 		
-		if($synth_ops === false) {
+		if ($synth_ops === false) {
 			$synth_ops = array();
 		}
 		
-		foreach($synth_ops as $synth_op) {
+		foreach ($synth_ops as $synth_op) {
 			unset($synth_op['id']);
 			$synth_op['id_agent_module_target'] = $id_new_module;
 			switch ($config['dbtype']) {
@@ -120,7 +120,7 @@ function modules_copy_agent_module_to_agent ($id_agent_module, $id_destiny_agent
 	
 	if ($source_tags ==  false)
 		$source_tags = array();
-		
+	
 	tags_insert_module_tag($id_new_module, $source_tags);
 	
 	//Added the config data if necesary
@@ -129,7 +129,7 @@ function modules_copy_agent_module_to_agent ($id_agent_module, $id_destiny_agent
 	$id_agente = modules_get_agentmodule_agent($id_agent_module);
 	
 	$agent_md5 = md5 (agents_get_name($id_agente), false);
-	$remote_conf = file_exists ($config["remote_config"]."/md5/".$agent_md5.".md5");
+	$remote_conf = file_exists ($config["remote_config"] . "/md5/" . $agent_md5 . ".md5");
 	
 	if ($remote_conf) {
 		$result = enterprise_hook('config_agents_copy_agent_module_to_agent',
