@@ -1,3 +1,12 @@
+2013-03-13 Miguel de Dios <miguel.dedios@artica.es>
+	
+	* include/functions_modules.php: fixed the massive deletion of
+	modules when only delete one module, the old code deleted all
+	modules in the agents on operation.
+	
+	* godmode/massive/massive_delete_modules.php: cleaned source code
+	style.
+
 2013-03-13  Kikuchi Koichiro <koichiro@rworks.jp>
 
 	* extensions/update_manager/lib/functions.ajax.php: Added proxy
